res/examples/invalid/list_trailing_comma.eg
[1, 2, 3,];

// out: SyntaxError: unexpected "]"; expected: ["\"{\"", "\"[\"", "\"(\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "\"if\"", "identifier", "string", "number"]